[package]
edition = "2021"
name = "irys-types"
version = "0.1.0"

[dependencies]
base58 = "0.2.0"
base64-url = "2.0.0"
color-eyre = "0.6.2"
eyre = "0.6.8"
fixed-hash = "0.8.0"
rand = "0.8.5"
reth-codecs = { path = "../../ext/reth/crates/storage/codecs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
uint = "0.9.5"

alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true
arbitrary.workspace = true
test-fuzz.workspace = true

bytes.workspace = true
modular-bitfield.workspace = true
