[package]
name = "irys-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
derive-syn-parse.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
toml.workspace = true

[lints]
workspace = true
