[package]
name = "irys-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
irys-actors.workspace = true
irys-types.workspace = true
irys-primitives.workspace = true
irys-api-client.workspace = true
irys-database.workspace = true
irys-vdf.workspace = true
# Other dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre.workspace = true
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
actix.workspace = true
serde = { workspace = true }
base58.workspace = true
actix-rt.workspace = true
reth-tasks.workspace = true
lru.workspace = true

[dev-dependencies]
irys-testing-utils.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-client = { workspace = true, features = ["test-utils"] }
irys-actors = { workspace = true, features = ["test-utils"] }
irys-storage.workspace = true
async-trait = "0.1"

[lints]
workspace = true
