[package]
edition = "2021"
name = "irys-packing"
version = "0.1.0"

[dependencies]
irys-c.workspace = true
irys-types.workspace = true
rand.workspace = true


[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }

[features]
nvidia = ["irys-c/nvidia"]

[lints]
workspace = true
