[package]
edition = "2021"
name = "reth-node-bridge"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rustler = {version = "0.32.1", features = ["nif_version_2_17"]}
# reth = {git = "https://github.com/paradigmxyz/reth" }

alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }


reth = { path = "../reth/bin/reth" }
reth-auto-seal-consensus = { path = "../reth/crates/consensus/auto-seal" }
reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
reth-beacon-consensus = { path = "../reth/crates/consensus/beacon" }
reth-cli-runner = { path = "../reth/crates/cli/runner" }
reth-codecs = { path = "../reth/crates/storage/codecs" }
reth-config = { path = "../reth/crates/config" }
reth-consensus = { path = "../reth/crates/consensus/consensus" }
reth-db = { path = "../reth/crates/storage/db" }
reth-db-common = { path = "../reth/crates/storage/db-common" }
reth-e2e-test-utils = { path = "../reth/crates/e2e-test-utils" }
reth-ethereum-payload-builder = { path = "../reth/crates/payload/ethereum" }
reth-evm = { path = "../reth/crates/evm" }
reth-exex = { path = "../reth/crates/exex" }
reth-interfaces = { path = "../reth/crates/interfaces" }
reth-node-api = { path = "../reth/crates/node/api" }
reth-node-core = { path = "../reth/crates/node-core" }
reth-node-ethereum = { path = "../reth/crates/ethereum/node" }
reth-node-events = { path = "../reth/crates/node/events" }
reth-payload-builder = { path = "../reth/crates/payload/builder" }
reth-primitives = { path = "../reth/crates/primitives" }
reth-provider = { path = "../reth/crates/storage/provider" }
reth-revm = { path = "../reth/crates/revm" }
reth-rpc-engine-api = { path = "../reth/crates/rpc/rpc-engine-api" }
reth-rpc-types = { path = "../reth/crates/rpc/rpc-types" }
reth-stages = { path = "../reth/crates/stages" }
reth-static-file = { path = "../reth/crates/static-file" }
reth-tracing = { path = "../reth/crates/tracing" }
reth-transaction-pool = { path = "../reth/crates/transaction-pool" }

revm = { path = "../revm/crates/revm" }
revm-primitives = { path = "../revm/crates/primitives" }


alloy-rlp = "0.3.5"
bs58 = "0.5.1"
clap = "4.5.4"
eyre = "0.6.12"
futures-util = "0.3.30"
jsonrpsee = "0.22"
jsonrpsee-core = "0.22"
jsonrpsee-types = "0.22"
new_type = "0.4.1"
once_cell = "1.19.0"
patch-crate = "0.1.9"
serde = "1.0.203"
serde_json = "1.0.117"
serde_path_to_error = "0.1"
strum = "0.26.3"
thiserror = "1.0.61"
tikv-jemallocator = "0.5.4"
tokio = "1.37.0"
tokio-stream = "0.1.15"
tracing = "0.1.40"

[features]
default = ["jemalloc"]
jemalloc = []
