[package]
edition = "2021"
name = "irys-reth-node-bridge"
version = "0.1.0"

# for linking speed - remove if it causes problems
crate-type = ["dylib"]

[dependencies]
irys-database.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
irys-config.workspace = true
alloy-signer-local.workspace = true
irys-primitives.workspace = true
reth-chainspec.workspace = true
reth-cli-commands.workspace = true
reth-cli-runner.workspace = true
reth-cli-util.workspace = true
reth-cli.workspace = true
reth-db.workspace = true
reth-ethereum-cli.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-node-metrics.workspace = true
reth.workspace = true
alloy-genesis.workspace = true
reth-auto-seal-consensus.workspace = true
reth-beacon-consensus.workspace = true
reth-consensus.workspace = true
reth-e2e-test-utils.workspace = true
reth-exex.workspace = true
reth-consensus-debug-client.workspace = true
reth-engine-service.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-engine-tree.workspace = true
reth-engine-util.workspace = true
reth-blockchain-tree.workspace = true
reth-network-api.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-payload-primitives.workspace = true
reth-rpc-eth-types.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-node-events.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-engine-api.workspace = true
reth-tracing.workspace = true

foldhash.workspace = true
irys-types.workspace = true
reth-tokio-util.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
futures.workspace = true
revm-primitives.workspace = true
revm.workspace = true

bs58 = "0.5.1"
clap = "4.5.4"
eyre = "0.6.12"
futures-util.workspace = true
jsonrpsee = { version = "0.24", features = ["client", "macros", "server"] }
jsonrpsee-core = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"
new_type = "0.4.1"
once_cell = "1.19.0"
patch-crate = "0.1.9"
serde = "1.0.203"
serde_json = "1.0.117"
serde_path_to_error = "0.1"
strum = "0.26.3"
thiserror = "1.0.61"
tikv-jemallocator = "^0.6.0"
tokio = "1.37.0"
tokio-stream = "0.1.15"
reth-stages-types.workspace = true
reth-network-peers.workspace = true
reth-rpc-types-compat.workspace = true
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-consensus = { workspace = true, features = ["kzg"] }
reth-payload-builder.workspace = true
reth-rpc-layer.workspace = true

[features]
default = ["jemalloc"]
jemalloc = []
