[package]
edition = "2021"
name = "irys-reth-node-bridge"
version = "0.1.0"

[dependencies]
irys-packing.workspace = true
irys-storage.workspace = true
irys-database.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
irys-config.workspace = true
alloy-signer-local.workspace = true
irys-primitives.workspace = true
reth-chainspec.workspace = true
reth-cli-commands.workspace = true
reth-cli.workspace = true
reth-db.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth.workspace = true
reth-beacon-consensus.workspace = true
reth-consensus.workspace = true
reth-e2e-test-utils.workspace = true
reth-exex.workspace = true
reth-consensus-debug-client.workspace = true
reth-engine-service.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-engine-tree.workspace = true
reth-engine-util.workspace = true
reth-blockchain-tree.workspace = true
reth-network-api.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-payload-primitives.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-node-events.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-engine-api.workspace = true
reth-tracing.workspace = true
reth-downloaders.workspace = true
reth-config.workspace = true
reth-static-file.workspace = true
reth-prune.workspace = true
reth-stages.workspace = true
reth-evm.workspace = true
irys-types.workspace = true
reth-tokio-util.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
futures.workspace = true
revm-primitives.workspace = true
revm.workspace = true
clap = "4.5.4"
eyre = "0.6.12"
futures-util.workspace = true
jsonrpsee = { version = "0.24", features = ["client", "macros", "server"] }
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
serde = "1.0.203"
serde_json = "1.0.117"
strum = "0.26.3"
thiserror = "1.0.61"
tokio = "1.37.0"
tokio-stream.workspace = true
reth-stages-types.workspace = true
reth-network-peers.workspace = true
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-consensus = { workspace = true, features = ["kzg"] }
reth-payload-builder.workspace = true
reth-rpc-layer.workspace = true

[features]
default = ["jemalloc"]
jemalloc = []
