[package]
edition = "2021"
name = "irys-reth-node-bridge"
version = "0.1.0"

[dependencies]
irys-storage.workspace = true
irys-database.workspace = true
irys-types.workspace = true
tracing.workspace = true
eyre = "0.6.12"
tokio = "1.37.0"
clap = { workspace = true, features = ["derive", "env"] }
reth.workspace = true
reth-db.workspace = true
reth-chainspec.workspace = true
reth-node-builder.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
irys-reth = { workspace = true, features = ["test-utils"] }
reth-node-ethereum.workspace = true
reth-e2e-test-utils.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
reth-node-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-payload-builder.workspace = true
reth-cli-commands.workspace = true
async-trait.workspace = true

[lints]
workspace = true
