[package]
name = "irys-reward-curve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "irys-reward-curve-simulation"
path = "src/main.rs"
required-features = ["emission-sim"]

[features]
default = []
emission-sim = ["csv", "clap"]

[dependencies]
irys-types.workspace = true
eyre.workspace = true
clap = { workspace = true, optional = true }
csv = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
