[package]
name = "storage-pricing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
eyre.workspace = true
rust_decimal = { workspace = true, features = ["maths"] }
rust_decimal_macros.workspace = true

[lints]
workspace = true
