[package]
name = "irys-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
openssl.workspace = true
nodit.workspace = true
eyre.workspace = true
serde.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
rand.workspace = true
tracing.workspace = true
serde_json.workspace = true
toml.workspace = true
reth-db.workspace = true
irys-database.workspace = true
irys-testing-utils.workspace = true
irys-packing.workspace = true
derive_more.workspace = true
base58.workspace = true
atomic-write-file = "0.2"

[lints]
workspace = true
