[package]
name = "irys-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
nodit.workspace = true
eyre.workspace = true
serde_json.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
tracing.workspace = true
tokio.workspace = true
irys-database.workspace = true
reth-db.workspace = true


[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true
