[package]
name = "irys-testing-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
eyre.workspace = true
irys-types.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[lints]
workspace = true
