[package]
edition = "2021"
name = "irys-types"
version = "0.1.0"

[dependencies]
chrono = "0.4"
uint = "0.9.5"
base58 = "0.2.0"
base64-url.workspace = true
derive_more = {version = "2.0.1" ,features = ["add","mul","from","into"],default-features = true}
eyre = "0.6.8"
fixed-hash = "0.8.0"
rand = "0.8.5"
reth-codecs = { path = "../../ext/reth/crates/storage/codecs" }
reth-db-api = { path = "../../ext/reth/crates/storage/db-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.107"
borsh = "1.3.0"
borsh-derive = "1.3.0"
alloy-rpc-types-engine.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
assert_matches = "1.5.0"

futures.workspace = true
tokio.workspace = true
actix.workspace = true
openssl.workspace = true
tracing.workspace = true
reth-db.workspace = true
alloy-core.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true
arbitrary.workspace = true
reth-primitives.workspace = true
test-fuzz.workspace = true
nodit.workspace = true
bytes.workspace = true
modular-bitfield.workspace = true
alloy-rlp.workspace = true
zerocopy = "0.8.9"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
irys-macros.workspace = true
irys-storage-pricing.workspace = true

[build-dependencies]
build-print = "0"
