[package]
edition = "2021"
name = "irys-types"
version = "0.1.0"

[features]
dev = [] # Empty list defined to prevent a warning that the macro `construct_fixed_hash!` generates without it. fixed-hash = "0.8.0"
test-utils = []

[dependencies]
uint = "0.9.5"
base58 = "0.2.0"
base64-url.workspace = true
derive_more = { version = "2.0.1", features = ["add", "mul", "from", "into"], default-features = true }
eyre = "0.6.8"
fixed-hash = "0.8.0" # TODO: if removing the dependency, ensure you also remove the [features] dev = [] section above.
rand = "0.8.5"
reth-codecs = { path = "../../ext/reth/crates/storage/codecs" }
reth-db-api = { path = "../../ext/reth/crates/storage/db-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
borsh = "1.3.0"
borsh-derive = "1.3.0"
alloy-rpc-types-engine.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
tokio.workspace = true
actix.workspace = true
openssl.workspace = true
tracing.workspace = true
reth-db.workspace = true
alloy-core.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives.workspace = true
arbitrary.workspace = true
reth-primitives.workspace = true
nodit.workspace = true
bytes.workspace = true
modular-bitfield.workspace = true
alloy-rlp.workspace = true
zerocopy = "0.8.9"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
bytemuck.workspace = true
hex.workspace = true

[dev-dependencies]
toml.workspace = true
test-fuzz.workspace = true

[build-dependencies]
build-print = "0"
