[package]
name = "irys-vdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
irys-types.workspace = true
sha2.workspace = true
rayon = "1.8.0"

tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
openssl.workspace = true
hex.workspace = true
base58.workspace = true

[lints]
workspace = true
