[package]
name = "irys-vdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
irys-types.workspace = true
irys-database.workspace = true
irys-efficient-sampling.workspace = true
irys-domain.workspace = true

sha2.workspace = true
rayon.workspace = true
reth-db.workspace = true
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
openssl.workspace = true
hex.workspace = true
base58.workspace = true
nodit.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }
irys-database = { workspace = true, features = ["test-utils"] }
tracing-subscriber.workspace = true
actix-rt.workspace = true

[lints]
workspace = true
