[package]
name = "irys-testing-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
rand.workspace = true
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
libc = "0.2.172"                                                              # same version as was already in the lockfile
[lints]
workspace = true
